--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <script src="../webdemo.js"></script>
+        <script src="chessweb.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
