Add board display and playMove()

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class='board'>
+            <!-- Auto filled by JS -->
+          </div>
+
         <script src="../webdemo.js"></script>
         <script src="chessweb.js"></script>
         <script src="main.js"></script>
