Make board playable

--- a/site/index.html
+++ b/site/index.html
@@ -3,10 +3,11 @@
     <head>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body style="display:flex;flex-direction: row;">
         <div class='board'>
             <!-- Auto filled by JS -->
-          </div>
+        </div>
+        <button style="height:120px;width:120px;margin:20px;font-weight: bold;font-size: 24px;" onclick="resetGame()">Reset</button>
 
         <script src="../webdemo.js"></script>
         <script src="chessweb.js"></script>
